--- a/style/monster.css
+++ b/style/monster.css
@@ -43,6 +43,7 @@
   min-width: 20px;
   min-height: 20px;
   margin: auto;
+  margin-left: 5px;
 }
 .forbidden-lands .monster .bio .avatar img:hover {
   box-shadow: 0 0 10px red;
